<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.media3.ui.PlayerView
        android:id="@+id/player_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:resize_mode="fit"
        app:show_buffering="when_playing"
        app:use_controller="false" />

    <LinearLayout
        android:id="@+id/channel_overlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_margin="32dp"
        android:background="@drawable/panel_background"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView android:id="@+id/channel_number" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/phosphor" android:textSize="28sp" android:textStyle="bold" />
        <TextView android:id="@+id/channel_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/white" android:textSize="22sp" />
        <TextView android:id="@+id/program_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxWidth="420dp" android:textColor="@color/white" android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/setup_panel"
        android:layout_width="520dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/panel_background"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/connect_title" android:textColor="@color/white" android:textSize="28sp" />
        <EditText android:id="@+id/server_url" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="18dp" android:hint="@string/server_url_hint" android:inputType="textUri" android:singleLine="true" android:textColor="@color/white" android:textColorHint="#99FFFFFF" />
        <Button android:id="@+id/connect_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="end" android:layout_marginTop="12dp" android:text="@string/connect" />
        <TextView android:id="@+id/setup_error" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:textColor="#FFFF7070" android:textSize="16sp" android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/error_panel"
        android:layout_width="520dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/panel_background"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView android:id="@+id/playback_error" android:layout_width="match_parent" android:layout_height="wrap_content" android:textColor="@color/white" android:textSize="20sp" />
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:gravity="end" android:orientation="horizontal">
            <Button android:id="@+id/retry_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/retry" />
            <Button android:id="@+id/settings_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="12dp" android:text="@string/settings" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
